--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <url>http://www.example.com</url>
 
   <properties>
+    <!--<java.version>21</java.version>-->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
   </properties>
